<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/bg_rounded_top"
        android:paddingHorizontal="0dp"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="250dp"
            android:layout_height="97dp"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/ic_logo_begood"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="0dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@color/light_green_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <TextView
            android:id="@+id/btnSkip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:padding="8dp"
            android:text="@string/skip"
            android:textColor="@color/main_green"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator" />

        <ImageView
            android:id="@+id/ivIllustration"
            android:layout_width="288dp"
            android:layout_height="288dp"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="54dp"
            android:contentDescription="@string/illustration_description"
            android:scaleType="fitCenter"
            android:src="@drawable/img_onboarding_3"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.695"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSkip3"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="13dp"
            android:fontFamily="@font/sora_semibold"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/onboarding_title_3"
            android:textColor="@color/main_green"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivIllustration" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/onboarding_description_3"
            android:textColor="@color/blue_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutFooter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/button_next_left3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="137dp"
                android:background="@drawable/button_background_alt"
                android:contentDescription="Next"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginEnd="6dp"
                    android:background="@drawable/dot_inactive" />
                <View
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginEnd="6dp"
                    android:background="@drawable/dot_inactive" />

                <View
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@drawable/dot_active" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/button_next_right3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="137dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/button_background"
                android:contentDescription="Next"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
